rename module, bugfix